[metadata]
name = geonode-importer
version = 0.0.1
author = geosolutions-it
author_email = info@geosolutionsgroup.com
url = https://github.com/geosolutions-it/geonode-importer
project_urls =
    Bug Tracker = https://github.com/geosolutions-it/geonode-importer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License
