[metadata]
name = geonode-importer
version = 1.0.3
author = geosolutions-it
author_email = info@geosolutionsgroup.com
url = https://github.com/geosolutions-it/geonode-importer
project_urls =
    Bug Tracker = https://github.com/geosolutions-it/geonode-importer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License

[flake8]
max-line-length = 200
exclude=geonode/*/migrations/*,scripts,docs,static,migrations,node_modules
extend-ignore=E122,E124
